# xstatic-graphlib

./: setup.cfg  setup.py
xstatic/pkg/graphlib/: __init__.py
