[metadata]
name = XStatic-Graphlib
description = A directed multi-graph library for JavaScript (XStatic packaging standard)
description-file = README.rst
maintainer = Radomir Dopieralski
maintainer-email = openstack@sheep.art.pl
home-page = https://github.com/dagrejs/graphlib
keywords = dagre d3 xstatic
license = BSD
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
